tests/errors/new_outside_object.dang
# new() is only valid inside object bodies
new(x: Int!) {
  print(value: x)
}
